--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="pref_sort_by">Sort by</string>
     <string name="pref_sort_key">sort</string>
 
+    <!-- Detals Page -->
+    <string name="details_release_date">Release Date</string>
+    <string name="details_plot">Plot</string>
+    <string name="details_rating">Rating</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
